# Portfolio

./: README.md
NYU_Tandon_Bridge/: README.md
NYU_Tandon_Bridge/Week 10/: mlb9559_hw10_q1.cpp  mlb9559_hw10_q2.cpp  mlb9559_hw10_q3.cpp
NYU_Tandon_Bridge/Week 11/: mlb9559_hw11_q1.cpp  mlb9559_hw11_q2.cpp  mlb9559_hw11_q3.cpp  mlb9559_hw11_q4.cpp
NYU_Tandon_Bridge/Week 12/: mlb9559_hw12.cpp
NYU_Tandon_Bridge/Week 13/: mlb9559_hw13.cpp
NYU_Tandon_Bridge/Week 14/: mlb9559_hw14.cpp
NYU_Tandon_Bridge/Week 15/: mlb9559_hw15.cpp
NYU_Tandon_Bridge/Week 16/: mlb9559_hw16_q1.cpp  mlb9559_hw16_q2.cpp
NYU_Tandon_Bridge/Week 17/: mlb9559_hw17.cpp
NYU_Tandon_Bridge/Week 2/: mlb9559_hw2_q1.cpp  mlb9559_hw2_q2.cpp  mlb9559_hw2_q3.cpp  mlb9559_hw2_q4.cpp
NYU_Tandon_Bridge/Week 20/: mlb9559_hw20.pcap
NYU_Tandon_Bridge/Week 3/: mlb9559_hw3_q1.cpp  mlb9559_hw3_q2.cpp  mlb9559_hw3_q3.cpp  mlb9559_hw3_q4.cpp  mlb9559_hw3_q5.cpp  mlb9559_hw3_q6.cpp
NYU_Tandon_Bridge/Week 4/: mlb9559_hw4_q1.cpp  mlb9559_hw4_q2.cpp  mlb9559_hw4_q3.cpp  mlb9559_hw4_q4.cpp  mlb9559_hw4_q5.cpp  mlb9559_hw4_q6.cpp
NYU_Tandon_Bridge/Week 5/: mlb9559_hw5_q1.cpp  mlb9559_hw5_q2.cpp
NYU_Tandon_Bridge/Week 6/: mlb9559_hw6_q1.cpp  mlb9559_hw6_q2.cpp  mlb9559_hw6_q3.cpp  mlb9559_hw6_q4.cpp
NYU_Tandon_Bridge/Week 7/: mlb9559_hw7_q1.cpp  mlb9559_hw7_q2.cpp
NYU_Tandon_Bridge/Week 8/: mlb9559_hw8_q1.cpp  mlb9559_hw8_q2.cpp  mlb9559_hw8_q3.cpp  mlb9559_hw8_q4.cpp  mlb9559_hw8_q5.cpp  mlb9559_hw8_q6.cpp
NYU_Tandon_Bridge/Week 9/: mlb9559_hw9_q1.cpp  mlb9559_hw9_q2.cpp  mlb9559_hw9_q3.cpp  mlb9559_hw9_q4.cpp
PDF_Data_Extraction_System/: README.md  requirements.txt
PDF_Data_Extraction_System/src/: config.py  pdf_processor_app.py
PDF_Data_Extraction_System/templates/: login.html  upload.html
Tax_Workflow_Management_System/: .gitignore  CMakeLists.txt  CSV_management.cpp  CSV_management.h  Lacerte_cross_ref.cpp  Lacerte_cross_ref.h  README.md  config.cpp  config.h  email_service.cpp  email_service.h  logger.cpp  logger.h  main.cpp  reminders.cpp  reminders.h  report_generator.cpp  report_generator.h  routes.cpp  routes.h  statistics.cpp  statistics.h  user.cpp  user.h  user_authentification.cpp  user_authentification.h  user_database.cpp  user_database.h
Tax_Workflow_Management_System/templates/: cross-reference.html  dashboard-template.html  dashboard.html  index.html  layout.html  settings.html
